[fix] Radio / Checkbox size & alignments

--- a/packages/scss/src/components/inputs/checkbox/_checkbox.scss
+++ b/packages/scss/src/components/inputs/checkbox/_checkbox.scss
@@ -1,4 +1,5 @@
 .checkbox {
+	display: block;
 	position: relative;
 }
 
@@ -6,38 +7,29 @@
 	opacity: 0;
 	pointer-events: none;
 	position: absolute;
-
-	&:checked ~ .checkbox-label {
-		&::after {
-			transform: scale(1);
-		}
-		&::before {
-			@include makeIcon("tick");
-		}
-	}
 }
 
 .checkbox-label {
 	cursor: pointer;
-	display: flex;
+	display: inline-flex;
 	align-items: flex-start;
-	transition: color 150ms ease;
+	transition: color _theme("commons.animations.durations.standard") ease;
 
 	&::before {
+		@include makeIcon("tick");
 		border-radius: _component("checkbox.input.border-radius");
 		box-shadow: inset 0 0 0 2px #999999;
-		content: "";
+		color: transparent;
 		display: block;
-		width: _component("checkbox.input.size");
+		flex: 0 0 auto;
+		font-size: .8rem;
 		height: _component("checkbox.input.size");
 		line-height: _component("checkbox.input.size");
-		transition: all 100ms ease;
-		color: white;
-		font-size: .8rem;
-		text-align: center;
 		margin-right: _component("checkbox.input.margin-right");
 		margin-top: _component("checkbox.input.margin-top");
-		flex: 0 0 auto;
+		text-align: center;
+		transition: all 100ms ease;
+		width: _component("checkbox.input.size");
 	}
 
 	&:hover {
@@ -56,6 +48,7 @@
 	@mixin checkboxColoring($palette) {
 		.checkbox-input:checked ~ .checkbox-label {
 			&::before {
+				color: #FFFFFF;
 				background-color: _color($palette);
 				box-shadow: inset 0 0 0 2px _color($palette);
 			}
