--- a/packages/scss/src/components/inputs/field/_field.scss
+++ b/packages/scss/src/components/inputs/field/_field.scss
@@ -7,7 +7,6 @@
 		color: _component("field.input.color");
 		font-family: unquote(_theme("commons.font.family"));
 		font-size: _component("field.font-size");
-		line-height: 1;
 		outline: 0;
 		position: relative;
 		width: 100%;
