--- a/packages/scss/src/components/inputs/radio/_radio.scss
+++ b/packages/scss/src/components/inputs/radio/_radio.scss
@@ -1,7 +1,6 @@
 .radio {
 	position: relative;
 	display: block;
-	margin: .25rem 0;
 }
 
 .radio-input {
